--- a/app/src/main/res/layout/fragment_byteel3ela.xml
+++ b/app/src/main/res/layout/fragment_byteel3ela.xml
@@ -23,12 +23,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:fontFamily="@font/fr"
+            android:gravity="center"
             android:text="@string/check_your_internet_connection"
-            android:textAlignment="center"
+            android:textColor="@color/Black"
             android:textSize="30sp"
             android:textStyle="bold"
-            android:textColor="@color/Black"
-            android:fontFamily="@font/fr"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
