--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,10 +37,10 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="@string/check_your_internet_connection"
                 android:fontFamily="@font/fr"
+                android:gravity="center"
+                android:text="@string/check_your_internet_connection"
                 android:textColor="@color/Black"
-                android:textAlignment="center"
                 android:textSize="18pt" />
         </androidx.core.widget.NestedScrollView>
     </androidx.appcompat.widget.LinearLayoutCompat>
