--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -7,7 +7,43 @@
     android:background="@color/White_White"
     tools:context=".StartActivity">
 
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_skip"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:text="Skip intro"
+                android:textColor="@color/Black"
+                android:gravity="end|center"
+                android:layout_marginBottom="10dp"
+                android:textSize="30sp"
+                android:visibility="visible" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/next" />
+        </LinearLayout>
+
+    </FrameLayout>
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -22,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="50"
+
             android:src="@drawable/bet"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +67,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
